--- a/public/learn/css-page/page2/index.html
+++ b/public/learn/css-page/page2/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    .spclear {
+      clear: both;
+    }
     /*上半圆*/
     .semi {
       margin: 0 16px;
@@ -37,6 +40,75 @@
       background-color: #f00;
       border-radius: 0 50px 50px 0;
     }
+
+    .triangle {
+      margin: 0 16px;
+      float: left;
+    }
+    /* 站位还是正方形 */
+    .triangle-square-top {
+      width: 0;
+      height: 0;
+      /* border: 50px solid transparent; */
+      border: 50px solid #ccc;
+      border-bottom-color: black ;
+    }
+    .triangle-square-bottom {
+      /* width: 0;
+      height: 0;
+      border-top: 50px solid black;
+      border-right: 50px solid transparent;
+      border-bottom: 50px solid transparent;
+      border-left: 50px solid transparent; */
+      width: 0;
+      height: 0;
+      /* border: 50px solid transparent; */
+      border: 50px solid #ccc;
+      border-top-color: black ;
+    }
+    .triangle-square-left {
+      width: 0;
+      height: 0;
+      /* border: 50px solid transparent; */
+      border: 50px solid #ccc;
+      border-right-color: black ;
+    }
+    .triangle-square-right {
+      width: 0;
+      height: 0;
+      /* border: 50px solid transparent; */
+      border: 50px solid #ccc;
+      border-left-color: black ;
+    }
+    /* 站位正常 */
+    .triangle-top {
+      width: 0;
+      height: 0;
+      border-bottom: 50px solid black;
+      border-right: 50px solid transparent;
+      border-left: 50px solid transparent;
+    }
+    .triangle-bottom {
+      width: 0;
+      height: 0;
+      border-top: 50px solid black;
+      border-right: 50px solid transparent;
+      border-left: 50px solid transparent;
+    }
+    .triangle-left {
+      width: 0;
+      height: 0;
+      border-top: 50px solid black;
+      border-bottom: 50px solid transparent;
+      border-right: 50px solid transparent;
+    }
+    .triangle-right {
+      width: 0;
+      height: 0;
+      border-top: 50px solid black;
+      border-bottom: 50px solid transparent;
+      border-left: 50px solid transparent;
+    }
   </style>
 </head>
 <body>
@@ -46,5 +118,19 @@
   <div class="semi semi-circle2"></div>
   <div class="semi semi-circle3"></div>
   <div class="semi semi-circle4"></div>
+  <div class="spclear"></div>
+
+  <p>三角形</p>
+  <div class="triangle triangle-square-top"></div>
+  <div class="triangle triangle-square-bottom"></div>
+  <div class="triangle triangle-square-left"></div>
+  <div class="triangle triangle-square-right"></div>
+  <div class="spclear"></div>
+  <div class="triangle triangle-top"></div>
+  <div class="triangle triangle-bottom"></div>
+  <div class="triangle triangle-left"></div>
+  <div class="triangle triangle-right"></div>
+  <div class="spclear"></div>
+
 </body>
 </html>
