--- a/public/learn/vue-page/page1/index.html
+++ b/public/learn/vue-page/page1/index.html
@@ -22,6 +22,29 @@
         </div>
       </div>
     </div>
+
+    <div class="wrapper">
+      <p class="wrapper-header">2.Vuex和localStorage的区别</p>
+      <div class="wrapper-content">
+        <div class="level-1">1)最重要的区别</div>
+        <div class="levels-2">
+          <div class="level-2"><span class="circle"></span>Vuex存储在内存</div>
+          <div class="level-2"><span class="circle"></span>localStorage则以文件的方式存储在本地</div>
+          <div class="level-2">注：localStorage只能存储字符串类型的数据，存储对象需要JSON的stringify和parse方法进行处理；读取内存比读取硬盘速度快。</div>
+        </div>
+        <div class="level-1">2)应用场景</div>
+        <div class="levels-2">
+          <div class="level-2"><span class="circle"></span>Vuex是一个专为vue.js应用程序开发的状态管理模式。它采用集中式存储管理应用的所有组件的状态，并以相应的规则保证状态以一种可预测的方式发生变化。Vuex用于组件之间的传值。</div>
+          <div class="level-2"><span class="circle"></span>localStorage是本地存储，是将数据存储到浏览器的方法，一般是在跨页面传递数据时使用。</div>
+          <div class="level-2"><span class="circle"></span>Vuex能做到数据的响应式，localStorage不能。</div>
+        </div>
+        <div class="level-1">3)永久性</div>
+        <div class="levels-2">
+          <div class="level-2"><span class="circle"></span>刷新页面时Vuex存储的值会丢失，localStorage不会。</div>
+          <div class="level-2">注：对于不变的数据，localStorage可以替代Vuex，但是当两个组件公用一个数据源(对象或数组)时，如果其中一个组件改变了该数据源，希望另一个组件响应该变化时，localStorage无法做到。</div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
